--- a/index.css
+++ b/index.css
@@ -10,7 +10,6 @@ body {
 
 section{
 	background-color: #DEB887;
-  width: 100%;
 	border: 1px solid black;
   margin: 10px;
 }
@@ -25,7 +24,7 @@ h1 {
 
 section > h2{
   float: right;
-	text-align: right;
+	text-align: center;
 	border: 1px solid black;
   	width: 230px;
     height: 40px;
@@ -46,8 +45,10 @@ section.sushi > h2{
 }
 
  section > p {
+  clear: both;
   text-align: center;
-  padding: 5px 5px 5px 5px;
+  margin-top: 10px;
+  padding: 15px 5px 5px 5px;
   font-size: 1em;
   overflow: auto;
 }
